--- a/StorageControl.app/StorageControl/StorageControl.Web/Views/Shared/Error.cshtml
+++ b/StorageControl.app/StorageControl/StorageControl.Web/Views/Shared/Error.cshtml
@@ -5,9 +5,10 @@
     <title>Error</title>
 </head>
 <body>
-    <hgroup>
-        <h1>Error.</h1>
-        <h2>An error occurred while processing your request.</h2>
+    <hgroup class="text-center">
+        <h1>Erro! ;(</h1>
+        <h2>Ocorreu um erro ao processar sua requisição.</h2>
+        <h2>Se o problema persistir, contate o administrador do sistema.</h2>
     </hgroup>
 </body>
 </html>
