--- a/StorageControl.app/StorageControl/StorageControl.Web/Views/Shared/_Layout.cshtml
+++ b/StorageControl.app/StorageControl/StorageControl.Web/Views/Shared/_Layout.cshtml
@@ -8,35 +8,36 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Controle de estoque", "Index", "Instruments", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Instrumentos", "Index", "Instruments")</li>
-                    <li>@Html.ActionLink("Categorias", "Index", "Categories")</li>
-                    <li>@Html.ActionLink("Tipos", "Index", "InstrumentTypes")</li>
-                </ul>
+        <div class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    @Html.ActionLink("Controle de estoque", "Index", "Instruments", new { area = "" }, new { @class = "navbar-brand" })
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Instrumentos", "Index", "Instruments")</li>
+                        <li>@Html.ActionLink("Categorias", "Index", "Categories")</li>
+                        <li>@Html.ActionLink("Tipos", "Index", "InstrumentTypes")</li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p style="text-align:center;">&copy; @DateTime.Now.Year - Storage Control - Sample App - Kaio Silveira, Developer </p>
-        </footer>
-    </div>
+        <div class="body-content">
+            @{ Html.RenderPartial("_Alerts"); }
+            @RenderBody()
+            <hr />
+            <footer>
+                <p style="text-align:center;">&copy; @DateTime.Now.Year - Storage Control - Sample App - Kaio Silveira, Developer </p>
+            </footer>
+        </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+        @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/bootstrap")
+        @RenderSection("scripts", required: false)
 </body>
 </html>
